--- a/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
+++ b/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
@@ -10,12 +10,6 @@
 		   creationComplete="doInit()"
 		   xmlns:dataDict="cn.superion.dataDict.*">
 	
-	<fx:Script>
-		<![CDATA[
-			
-		]]>
-	</fx:Script>
-	
 	
 	<fx:Script source="ModSendCheckas.as"/>
 
@@ -30,6 +24,7 @@
 						  width="100%"
 						  printClick="printClickHandler(event)"
 						  expClick="expClickHandler(event)"
+						  deleteClick="toolBar_deleteClickHandler(event)"
 						  excelClick="excelClickHandler(event)"
 						  cancelClick="cancelClickHandler(event)"
 						  verifyClick="verifyClickHandler(event)"
@@ -49,7 +44,7 @@
 							  verticalAlign="middle">
 						<s:Label text="状态" color="#0000FF"/>
 						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
-										dataProvider="{new ArrayCollection([{'k':'1','v':'未审(1)'},{'k':'2','v':'已审(2)'},{'k':'3','v':'供货量已审(3)'},{'k':'4','v':'供货商已审(4)'},{'k':'0','v':'申请未提交(0)'}])}"
+										dataProvider="{new ArrayCollection([{'k':'1','v':'未审(1)'},{'k':'2','v':'已审(2)'},{'k':'3','v':'供货量已审(3)'},{'k':'4','v':'供货商已审(4)'},{'k':'0','v':'申请未提交(0)'},{'k':'9','v':'删除(9)'}])}"
 										labelField="v" selectedIndex="0"/>						
 						<s:Label text="仓库"
 								 color="#0000FF"/>
